--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tap-event-plugin": "^3.0.3",
+    "react-with-firebase-auth": "^1.3.2",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
